--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.8.3
+beautifulsoup4==4.4.1
 Flask==0.10.1
 Flask-Migrate==1.6.0
 Flask-Script==2.0.5
@@ -10,6 +11,7 @@ Mako==1.0.3
 MarkupSafe==0.23
 psycopg2==2.6.1
 python-editor==0.4
+requests==2.8.1
 SQLAlchemy==1.0.9
 Werkzeug==0.11.2
 wheel==0.24.0
